# fit2png

./: .editorconfig  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  sample.ipynb
fit2png/common/: constants.py
fit2png/utils/: __init__.py  apply_mask.py  color_for_class_id.py  computer_vision_hud.py  draw_corner_box.py  draw_text.py  draw_text_rotated.py  get_address.py  image_draw.py  read_fit.py  render_hud.py
src/fit2png/common/: constants.py
src/fit2png/console/: main.py
src/fit2png/utils/: __init__.py  depth_hud.py  draw_label.py  draw_shaded_box.py  draw_text.py  draw_text_vertical.py  get_address.py  get_hr_zone.py  image_draw.py  parse_cfg.py  render_audiometer.py  render_minimap.py
tests/: test_help.py
