[project]
name = "fit2png"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "garmin-fit-sdk>=21.178.0",
    "geopy>=2.4.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "ultralytics==8.4.14",
]
